--- a/src/components/addressform/AddressForm.css
+++ b/src/components/addressform/AddressForm.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0px;
+    margin: 0;
     height: 100%;
 }
 
@@ -13,7 +13,6 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 0px solid blue;
 }
 
 .logo-content {
@@ -21,25 +20,22 @@ body {
     flex-direction: row;
     align-items: center;
     width: 80%;
-    border: 0px solid blue;
 }
 
 .logo-content-img {
-    border: 0px solid #42515F;
-    padding: 5px;
-    max-height: 50px;
+    border: solid 0px #42515F;
 }
 
 .address-text {
-    text-align: left;
-    font: normal normal bold 22px/25px Montserrat;
+    font: normal normal bold 20px/25px Montserrat;
+    font-family: "Montserrat", sans-serif;
     letter-spacing: 0px;
-    color: #008CFF;
-    text-transform: uppercase;
+    color:#008CFF;
+    text-transform: capitalize;
 }
 
-.book-text {
-    color: #42515F;
+.book {
+    color: #42515f;
 }
 
 * {
@@ -48,55 +44,41 @@ body {
 
 .form-content {
     min-height: calc(100% - 80px);
-    background-color: #f7f7f7;
+    background-color: #00000029 ;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0px solid green;
+    padding-top: 60px;
+    padding-bottom: 80px;
 }
 
 .form {
-    min-width: 65%;
-    padding: 20px 0px;
+    width: 55%;
     box-shadow: 0px 3px 6px #00000029;
-    border: 1px solid #F5F5F5;
+    border: 1px solid #f5f5f5;
     border-radius: 8px;
     opacity: 1;
 }
 
 .form-head {
     display: flex;
-    align-items: center;
-    border-radius: 8px 8px 0px 0px;
-    padding: 20px;
+    text-indent: 300px;
     background: #008CFF 0% 0% no-repeat padding-box;
-    opacity: 1;
-}
-
-.header-text {
-    text-align: left;
     font: normal normal normal 28px/37px Roboto;
-    letter-spacing: 0px;
-    color: #FFFFFF;
-    text-transform: uppercase;
+    color: #ffffff;
     opacity: 1;
-    margin: auto;
-}
-
-.cancel-img {
-    margin-right: 10px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    opacity: 1;
-    height: 44px;
+    border-radius: 8px 8px 0px 0px;
+    padding: 30px;
 }
 
 .row-content {
+    padding-left: 60px;
+    padding-right: 60px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 0px solid #F5F5F5;
+    opacity: 1;
     display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    border: 0px solid green;
-    width: 80%;
-    margin-left: 10%;
+    flex-wrap: wrap;
 }
 
 .label {
@@ -113,89 +95,96 @@ label {
     font: normal normal normal 18px/24px Roboto;
     letter-spacing: 0px;
     color: #42515F;
-    text-transform: capitalize;
     opacity: 1;
 }
 
 .input {
     width: 100%;
-    padding: 10px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #BDBDBD;
-    border-radius: 3px;
-    opacity: 1;
-}
-
-.select-items {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 10px;
-    border: 0px solid green;
-    width: 80%;
-    margin-left: 10%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-select {
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+}
+
+.row-50 {
+    display: flex;
+    flex: 50%; 
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 20px;
+}
+
+.row-33 {
+    display: flex;
+    flex: 33%; 
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 20px;
+}
+
+select {
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color: transparent;
+}
+
+.drop {
+    text-align: left;
     font: normal normal normal 18px/24px Roboto;
     letter-spacing: 0px;
     color: #42515F;
-    background-color: transparent;
-    width: 100%;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #BDBDBD;
-    border-radius: 3px;
     opacity: 1;
-
-}
-
-.selectDiv {
-    margin-right: 15px;
+    width: 100%;
+    border: 0px solid #ccc;
+    display: inline-block;
+    resize: vertical;
 }
 
 error-output {
     margin-left: 10px;
-    font-size: 15px;
+    font-size: 12px;
     font-style: italic;
     color: red;
 }
 
-.error-div {
+.button-content {
     display: flex;
-    flex-direction: row;
-}
-
-.buttonParent {
-    display: flex;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    background: #FFFFFF;
+    opacity: 1;
     margin-bottom: 10px;
-    justify-content: flex-end;
-    margin-top: 50px;
-    margin-right: 10%;
+    padding-left: 60%;
+    margin-top: 20px;
 }
 
 .button {
     font-size: 20px;
-    font-family: Robot;
+    font-family: Roboto;
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
-    background: #E2E2E2 0% 0% no-repeat padding-box;
-    border: 1px solid #969696;
+    border: none;
     font-weight: 400;
     min-width: 140px;
     padding: 7px 7px;
-    border-radius: 5px;
+    border: 1px solid #707070;
     cursor: pointer;
 }
 
 .submitButton {
-    margin-right: 30px; 
-    border: 1px solid #969696;
-    border-radius: 5px;
+    border: 1px solid #42515f;
+    border-radius: 5%;
+    margin-right: 30px;
+}
+
+.image {
+    padding-left: 300px;
     opacity: 1;
+    height: 44px;
 }
